Add new post endpoint
