# golang/internal/docs/swagger.json
@@ -28,22 +28,22 @@
                 }
             }
         },
-        "/article": {
+        "/articles": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "article"
+                    "db"
                 ],
-                "summary": "全ての記事のidとtitleを返す",
+                "summary": "全ての記事のデータを返す",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/server.Titles"
+                                "$ref": "#/definitions/server.Title"
                             }
                         }
                     }
@@ -64,7 +64,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.ReceiveJson"
+                            "$ref": "#/definitions/server.ArticleAllSteps"
                         }
                     }
                 ],
@@ -72,7 +72,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.Article"
+                            "$ref": "#/definitions/server.Message"
                         }
                     },
                     "400": {
@@ -84,7 +84,7 @@
                 }
             }
         },
-        "/article/{article_id}": {
+        "/articles/{article_id}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -106,7 +106,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.Article"
+                            "$ref": "#/definitions/server.ArticleAllSteps"
                         }
                     }
                 }
@@ -118,7 +118,7 @@
                 "tags": [
                     "article"
                 ],
-                "summary": "既存の記事を編集",
+                "summary": "記事の編集",
                 "parameters": [
                     {
                         "type": "integer",
@@ -133,7 +133,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.ReceiveJson"
+                            "$ref": "#/definitions/server.ArticleAllSteps"
                         }
                     }
                 ],
@@ -141,7 +141,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.Article"
+                            "$ref": "#/definitions/server.Message"
                         }
                     },
                     "400": {
@@ -153,23 +153,55 @@
                 }
             }
         },
-        "/db": {
+        "/articles/{article_id}/{step_id}": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "db"
+                    "article"
                 ],
-                "summary": "全ての記事のデータを返す",
+                "summary": "urlパラメータで指定された記事のステップを出力",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Article ID",
+                        "name": "article_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Step ID",
+                        "name": "step_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/server.Article"
-                            }
+                            "$ref": "#/definitions/server.ArticleOneStep"
+                        }
+                    }
+                }
+            }
+        },
+        "/swagger": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "helloWorld"
+                ],
+                "summary": "/swagger/index.html#/にアクセスするとswaggerを返す",
+                "responses": {
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.Message"
                         }
                     }
                 }
@@ -177,19 +209,44 @@
         }
     },
     "definitions": {
-        "server.Article": {
+        "server.ArticleAllSteps": {
             "type": "object",
             "properties": {
                 "author": {
                     "type": "string"
                 },
-                "content": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
+                "steps": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/server.Step"
+                    }
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "server.ArticleOneStep": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "type": "string"
+                },
+                "step": {
+                    "$ref": "#/definitions/server.Step"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "server.Code": {
+            "type": "object",
+            "properties": {
+                "code_content": {
+                    "type": "string"
+                },
+                "code_file_name": {
                     "type": "string"
                 }
             }
@@ -202,24 +259,30 @@
                 }
             }
         },
-        "server.ReceiveJson": {
+        "server.Step": {
             "type": "object",
             "properties": {
-                "author": {
-                    "type": "string"
+                "codes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/server.Code"
+                    }
                 },
                 "content": {
-                    "type": "string"
-                },
-                "title": {
                     "type": "string"
                 }
             }
         },
-        "server.Titles": {
+        "server.Title": {
             "type": "object",
             "properties": {
-                "id": {
+                "articleId": {
+                    "type": "string"
+                },
+                "author": {
+                    "type": "string"
+                },
+                "likes": {
                     "type": "integer"
                 },
                 "title": {
